Fixed reloader z-index

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -150,6 +150,7 @@ button{
   .tabs-move-container{
     //display: table-row;
 /*<<<<<<< HEAD*/
+    position: relative;
     -webkit-box-flex: 1; 
     flex: 1 0 auto;
     height: 0;
